k8s-aws-replacement/gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: microservices-demo
spec:
  hosts:
  - "*"
  gateways:
  - microservices-gateway
  http:
  - match:
    - uri:
        exact: /api/backend1
    route:
    - destination:
        host: backend
        port:
          number: 80
  - match:
    - uri:
        exact: /api/backend2
    route:
    - destination:
        host: backend2
        port:
          number: 80
  - route:
    - destination:
        host: frontend
        port:
          number: 80
